# stacking-pr-app

./: .bandit  .coverage  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci.yml
alembic/: env.py
app/: db.py  main.py
app/api/: task_router.py
app/models/: task.py
app/schemas/: task.py
stacking_pr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_dependencies.py  test_main.py
tests/api/: test_task_router.py
tests/integration/: test_database.py
tests/models/: test_task.py
tests/schemas/: test_task.py
